# KewellDaemon

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  Daemon.cpp  MainApp.cpp
app/data/: CMakeLists.txt  CmdDispatcher.cpp  IPC.cpp
app/log/: file_log.cpp
app/network/: UpperBroadcastReceiver.cpp  special_broadcast.cpp
app/utility/: GpioOperator.cpp  Utility.cpp
include/base/: Daemon.hpp
include/data/: CmdDispatcher.h  IPC.h  IPC.hpp
include/log/: file_log.hpp
include/network/: UpperBroadcastReceiver.h  special_broadcast.hpp
include/utility/: GpioOperator.h  Utility.h
